--- a/indexpages.css
+++ b/indexpages.css
@@ -1,1 +1,67 @@
 
+/* CSS Post Wrapper */
+.post-inner {padding:0;}
+.post-outer{padding:0 1%;}
+.post{height:auto;background:#fff;margin:0 0 20px 0;padding:0;border:0;transition:all .6s ease-in-out}
+.shar{display:none;width:0}
+@media screen and (min-width:768px){.post{width:50%;padding:0 1%;float:left;margin-top:0;height:360px}
+.post-outer{padding:0}
+.img-thumblite{margin:0 0 10px 0}}
+
+@media screen and (max-width:768px) {
+#viennalite-wrapper {margin:0 auto;padding:20px 2%;box-shadow:none;}
+#post-wrapper,.main{margin-top:0 !important}.myhome{margin-bottom:0 !important}}
+
+.post-body{line-height:1.6em;padding:0;font-size:14px;margin:0;text-overflow:ellipsis}
+.viennalite-info {margin-top:5px;margin-right:15px;margin-bottom:0;padding:0;font-size:14px;}
+.viennalite-info a {display:inline;background:transparent;color:#999;padding:5px;padding-left:0;margin-bottom:10px;transition:all .3s ease-out;}
+.viennalite-info a:hover {background:transparent;color:#e1a66c;}
+.author-info, .time-info, .comment-info, .review-info {display:inline;padding:0;font-size:10px;color:#000}
+.viennalite-info {background:transparent;}
+.author-info, .time-info, .comment-info, .review-info, .viennalite-info a {color:#999;}
+.author-info, .time-info, .comment-info, .review-info {margin-right:8px;}
+.img-thumblite{overflow:hidden;background:#ffffff;position:relative;height:181px;margin:5px auto;z-index:1;padding:0}
+
+.img-thumblite img {width:100%;height:180px;transform:scale(1.0);backface-visibility:hidden;transition:transform 1.6s;}
+.img-thumblite:hover img {transform:scale(1.02);}
+
+/* CSS Animate Heading */
+h2.post-title,h1.post-title{font-family:&#39;Roboto Condensed&#39;;font-size:32px;padding:0;margin:0;text-align:left;font-weight:700}
+h2.post-title a:hover, h1.post-title a:hover,h2.post-title:hover, h1.post-title:hover {color:#ff0000}
+h2.post-title a, h1.post-title a {color:#000;padding:0;margin:0;position:relative;display:inline-block;}
+h2.post-title a::before,h1.post-title a::before{display:inline-block;position:absolute;top:0;left:0;overflow:hidden;padding:0;width:100%;height:0;color:#e1a66c;content:attr(data-hover);transition:height .6s}
+h2.post-title a:hover::before, h2.post-title a:focus::before {height:100%;}
+
+/* CSS Label Info */
+.post .label-info{margin:0;padding:0;display:inline-block;position:absolute;left:2%;top:21%;z-index:2}
+.label-info a{position:relative;background:transparent;color:#fff;font-size:12px;display:block;text-transform:uppercase;padding:5px 10px;line-height:normal;font-weight:700;margin:0;transition:all .3s ease-out}
+.label-info a:hover{background:rgba(79,175,233,1);color:#fff;}
+.label-info a i {color:#ffde79;transition:all .3s ease-out}
+.label-info a:hover i {color:#fff;}
+.label-info a:nth-child(n+2){display:none;}
+
+/* CSS Homepage Responsive */
+@media only screen and (max-width:768px){
+.img-thumblite {margin:0 10px 0 0;}
+.viennalite-info {margin-bottom:10px;font-size:12px;}
+.post-body {margin-top:0;}}
+
+@media only screen and (max-width:640px){
+#content-wrapper {padding:0;}
+h2.post-title, h1.post-title, h2.post-title a, h1.post-title a, h2.post-title, h1.post-title {font-size:24px;margin:5px 0;clear:both;padding:20px 0 0 0;}
+.post {padding:0 1%;}
+.post-outer {padding:0;}
+.post-body {margin-bottom:5px;padding:0;}
+.img-thumblite {width:100%;max-width:100%;height:180px;margin:0;}
+.img-thumblite img {width:100%;height:180px;}
+.post .label-info{position:relative;left:0;margin:10px 0}
+.label-info a{padding:3px 7px;font-weight:400;color:#444;text-transform:none;}
+div#HTML13,div#HTML14 {padding:0 0 15px 0;}
+h2.post-title a:hover, h1.post-title a:hover,h2.post-title:hover, h1.post-title:hover {color:#444!important;text-decoration:underline}
+h2.post-title a, h1.post-title a {display:block;}
+h2.post-title a::before,h1.post-title a::before,h2.post-title a:hover::before, h2.post-title a:focus::before{display:none;}}
+
+@media only screen and (max-width:480px){
+h2.post-title, h1.post-title, h2.post-title a, h1.post-title a, h2.post-title, h1.post-title {font-size:18px;}.adslot1{display:block}}
+
+@media only screen and (min-width:480px){.adslot1{display:none}}
